# Machine-Learning-810161

./: .gitignore  Alkemy_Business_Presentation_1final1.pptx  README.md  ai_productivity_alkemy.pptx  ai_productivity_alkemy_final.pptx  ai_productivity_alkemy_v2.pptx  ai_productivity_alkemy_v3.pptx.pptx  eda.ipynb  main.ipynb  modelling.ipynb  presentation_draft.pptx  pyproject.toml
.claude/: settings.local.json
data/: ai_productivity_dataset_final.csv
scripts/: preprocess.py
